myelin-macros/tests/ui/fail_lifetime.stderr
error: myelin::service: trait generics are not supported in v1
 --> tests/ui/fail_lifetime.rs:2:21
  |
2 | pub trait FooService<'a> {
  |                     ^
